--- a/app/views/cells/show.html.haml
+++ b/app/views/cells/show.html.haml
@@ -11,7 +11,9 @@
       .card-body
         - if @cell.picture.present?
           .cell-picture.pull-right
-            .img-fluid.m-3= image_tag @cell.picture.url(:medium)
+            .m-3
+              = link_to @cell.picture.url(:original), data: { featherlight: 'image' } do
+                = image_tag @cell.picture.url(:medium), class: 'img-fluid img-thumbnail'
             - if current_user == @cell.board.user
               .mx-3= link_to 'Delete picture', { action: :delete_picture }, method: :put, class: "btn btn-danger btn-sm"
         = simple_format @cell.response
