Show blown up image on the different browser window

--- a/app/views/cells/index.html.haml
+++ b/app/views/cells/index.html.haml
@@ -20,7 +20,7 @@
       .card{style:'min-height: 100px'}
         .card-body
           - if cell.picture.present?
-            = link_to cell.picture.url(:original), data: { featherlight: 'image' } do
+            = link_to cell.picture.url(:original), target: '_blank' do
               = image_tag cell.picture.url(:medium), class: 'img-fluid img-thumbnail', align: 'right'
           = simple_format cell.response
       %p
