Yarn add lightbox2

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require bootstrap/dist/css/bootstrap.min
  *= require magnific-popup/dist/magnific-popup
  *= require startbootstrap-freelancer/scss/freelancer
+ *= require lightbox2/dist/css/lightbox.min
  *= require commontator/application
  *= require_tree .
  *= require_self
