--- a/app/views/cells/show.html.haml
+++ b/app/views/cells/show.html.haml
@@ -13,8 +13,11 @@
         - if @cell.picture.present?
           .cell-picture.pull-right
             .m-3
-              = link_to @cell.picture.url(:original), target: '_blank' do
-                = image_tag @cell.picture.url(:medium), class: 'img-fluid img-thumbnail'
+              = link_to @cell.picture.url(:original),
+                data: { lightbox: @cell.picture_file_name,
+                        title: @cell.picture_file_name } do
+                = image_tag @cell.picture.url(:medium),
+                  class: 'img-fluid img-thumbnail'
             - if current_user == @cell.board.user
               .mx-3= link_to 'Delete picture', { action: :delete_picture }, method: :put, class: "btn btn-danger btn-sm"
         = markdown(@cell.response)
