--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -10,7 +10,7 @@
           |
         = link_to 'scoreboard', boards_path
         |
-        = link_to 'Instructions', '#', data: { toggle: 'modal', target: '#boardInstrModal' }
+        = link_to 'instructions', '#', data: { toggle: 'modal', target: '#boardInstrModal' }
     .row
       .col-md-6
         %h4
@@ -32,16 +32,16 @@
               .sharing
                 - if finished == 'finished'
                   = link_to board_cell_path(@board, the_cell), class: 'btn btn-primary btn-sm' do
-                    Read sharing #{fa_icon 'comment'}
+                    read sharing #{fa_icon 'comment'}
                     %br
                     %small [ #{pluralize(the_cell.thread.comments.where(deleted_at:nil).count, 'comment')} ]
                 - else
                   = link_to new_board_cell_path(board_id: @board.id, row: index_row, col: index_col), class: 'btn btn-warning btn-sm' do
-                    =fa_icon 'check-circle'
-                    Finish!
+                    submit
+                    =fa_icon 'upload'
               .all-sharing.small.mt-2
                 = link_to cells_path(row: index_row, col: index_col) do
-                  All sharing (#{Cell.where(col: index_col, row: index_row).count})
+                  all sharing [#{Cell.where(col: index_col, row: index_row).count}]
   .col-md-3
     / = render partial: 'bonus'
     = render partial: 'sharing'
