--- a/app/views/cells/show.html.haml
+++ b/app/views/cells/show.html.haml
@@ -8,7 +8,7 @@
     %ul.nav.justify-content-end
       %li.nav-item
         = link_to cells_path(row: @cell.row, col: @cell.col), class: 'nav-link' do
-          Other sharing [#{Cell.where(col: @cell.row, row: @cell.col).count}]
+          Other sharing [#{Cell.where(row: @cell.row, col: @cell.col).count}]
         - if current_user == @cell.board.user
           %li.nav-item
             = link_to 'Edit', edit_board_cell_path(@cell.board, @cell), class: 'nav-link'
