Customize lightbox css to use assets pipeline

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,13 +13,13 @@
  *= require bootstrap/dist/css/bootstrap.min
  *= require magnific-popup/dist/magnific-popup
  *= require startbootstrap-freelancer/scss/freelancer
- *= require lightbox2/dist/css/lightbox.min
  *= require commontator/application
  *= require_tree .
  *= require_self
  */
 
 @import "font-awesome";
+@import "lightbox";
 
 header.masthead#announcements {
   padding-top: 100px;
