Updated home page info

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -10,18 +10,23 @@
         =image_tag "TFG-WEB.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-md-block
           %h3 The Friday Gathering - Summer Edition!
-          %p Summer is a time for relationship building, so we will meet at homes in Alameda for Bible studies on Fridays.
+          %p
+            Summer is a time for relationship deepening with God and with one another.
+            %br
+            We hope to get to know one another more personally through sharing from the Word of God together.
           %h6
-            Alameda @ 6:30 PM, Friday | Rides @ 6 PM at Barrows Hall
-          %p Please contact Virginia (virginia.chae at gpmail.org) for rides
+            = link_to 'Durant Loft', 'https://www.google.com/maps/place/Durant+Loft+Gracepoint+Berkeley+Church/@37.867612,-122.2603332,17z/data=!3m1!4b1!4m5!3m4!1s0x80857c2f15eae943:0xf01c25977184844d!8m2!3d37.867612!4d-122.2581392', target: '_blank'
+            @ 6:30 PM, Friday, 6/8/2018
+            -# | Rides @ 6 PM at Barrows Hall
+          %p Please contact Nghia (nghia.tran [@] gpmail.org) for rides
       .carousel-item
         =image_tag "SWS-generic.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-md-block
           %p We gather to worship God through songs, prayers, and listening to sermons every Sunday. Everyone is welcome!
           %h6
-            = link_to 'Harbor Bay Parkway', 'https://www.google.com/maps/place/Gracepoint+Berkeley+Church/@37.7259911,-122.23579,17z/data=!3m1!4b1!4m5!3m4!1s0x808f846a9fc9b947:0xb503fe545d3946b6!8m2!3d37.7279048!4d-122.2338217'
-            @ 9:00 AM, Sunday, 5/13/2018
-          %p Rides at Barrows Hall at 8:15 AM
+            = link_to 'Harbor Bay Parkway', 'https://www.google.com/maps/place/Gracepoint+Berkeley+Church/@37.7259911,-122.23579,17z/data=!3m1!4b1!4m5!3m4!1s0x808f846a9fc9b947:0xb503fe545d3946b6!8m2!3d37.7279048!4d-122.2338217', target: '_blank'
+            @ 9:00 AM, Sunday, 6/10/2018 | Rides at Barrows Hall at 8:15 AM
+          %p Please contact Nghia (nghia.tran [@] gpmail.org) for rides
       .carousel-item
         =image_tag "iusm-big-group.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-md-block
