Move lightbox2 js to the bottom. This doesn't seem right but just to make it work

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,4 +31,5 @@
           = yield
     = render partial: 'layouts/footer'
 
-    = javascript_include_tag "startbootstrap-freelancer/js/freelancer.min"
+    = javascript_include_tag 'startbootstrap-freelancer/js/freelancer.min'
+    = javascript_include_tag 'lightbox2/dist/js/lightbox.min'
