--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,8 +1,10 @@
 .pull-right
+  = link_to 'INSTRUCTIONS', '#', data: { toggle: 'modal', target: '#boardInstrModal' }, class: 'btn btn-success'
   - if current_user.board
-    = link_to "GO TO MY GAME BOARD", current_user.board, class: 'btn btn-warning'
+    = link_to "MY GAME BOARD", current_user.board, class: 'btn btn-warning'
   - else
     = link_to "LET'S START!", new_board_path, class: 'btn btn-warning'
+
 
 %h2.text-primary Welcome to the Summer Challenge!
 .lead
@@ -30,3 +32,28 @@
                 %span.badge.badge-primary.badge-pill= user.score
   .col-md-4
     = render partial: 'sharing'
+
+#boardInstrModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", role: "dialog", tabindex: "-1"}
+  .modal-dialog.modal-lg{role: "document"}
+    .modal-content
+      .modal-header
+        %h5#exampleModalLabel.modal-title Game Instructions
+        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
+          %span{"aria-hidden" => "true"} ×
+      .modal-body
+        %h4 Why are we doing this?
+        %p To grow in our knowledge of God through doing this summer challenge bingo game together.
+        %h4 Point System
+        %p.easy Green is easy ==> #{Board::SCORE[:easy]} points.
+        %p.medium Orange is medium ==> #{Board::SCORE[:medium]} points.
+        %p.hard Dark red is hard ==> #{Board::SCORE[:hard]} points.
+        %p.xhard Red (center) is extra hard ==> #{Board::SCORE[:xhard]} points.
+        %p
+          %strong BINGO! (five in a row) = #{Board::SCORE[:bingo]} points
+        %h4 Prizes
+        %p Completion of Bingo - IUSM T-shirt!
+        %p Highest Individual Score - Bible Project Outline Book
+        %p Highest TEAM Score - $10 Certificate for Book Table
+
+      .modal-footer
+        %button.btn.btn-secondary{"data-dismiss" => "modal", type: "button"} Close
