--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -46,8 +46,8 @@
     = render partial: 'sharing'
 
 :javascript
-  $('[data-toggle="popover"]').popover();
+  $('.instruction[data-toggle="popover"]').popover();
 
-  $('[data-toggle="popover"]').on('click', function (e) {
-    $('[data-toggle="popover"]').not(this).popover('hide');
+  $('.instruction[data-toggle="popover"]').on('click', function (e) {
+    $('.instruction[data-toggle="popover"]').not(this).popover('hide');
   });
