--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -15,9 +15,10 @@
             %br
             We hope to get to know one another more personally through sharing from the Word of God together.
           %h6
-            = link_to 'Durant Loft', 'https://www.google.com/maps/place/Durant+Loft+Gracepoint+Berkeley+Church/@37.867612,-122.2603332,17z/data=!3m1!4b1!4m5!3m4!1s0x80857c2f15eae943:0xf01c25977184844d!8m2!3d37.867612!4d-122.2581392', target: '_blank'
-            @ 6:30 PM, Friday, 6/15/2018
-            -# | Rides @ 6 PM at Barrows Hall
+            The Lei's
+            -# = link_to 'Durant Loft', 'https://www.google.com/maps/place/Durant+Loft+Gracepoint+Berkeley+Church/@37.867612,-122.2603332,17z/data=!3m1!4b1!4m5!3m4!1s0x80857c2f15eae943:0xf01c25977184844d!8m2!3d37.867612!4d-122.2581392', target: '_blank'
+            @ 7:00 PM, Friday, 6/15/2018
+            | Rides @ 6 PM at Barrows Hall
           %p Please contact Nghia (nghia.tran [@] gpmail.org) for rides
       .carousel-item
         =image_tag "SWS-generic.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
@@ -25,7 +26,7 @@
           %p We gather to worship God through songs, prayers, and listening to sermons every Sunday. Everyone is welcome!
           %h6
             = link_to 'Harbor Bay Parkway', 'https://www.google.com/maps/place/Gracepoint+Berkeley+Church/@37.7259911,-122.23579,17z/data=!3m1!4b1!4m5!3m4!1s0x808f846a9fc9b947:0xb503fe545d3946b6!8m2!3d37.7279048!4d-122.2338217', target: '_blank'
-            @ 9:00 AM, Sunday, 6/10/2018 | Rides at Barrows Hall at 8:15 AM
+            @ 9:00 AM, Sunday, 6/17/2018 | Rides at Barrows Hall at 8:15 AM
           %p Please contact Nghia (nghia.tran [@] gpmail.org) for rides
       .carousel-item
         =image_tag "iusm-big-group.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
