--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,8 @@
   %head
     %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1, shrink-to-fit=no"}
-    %meta{name: "description", content: ""}
-    %meta{name: "author", content: ""}
+    %meta{name: "description", content: "Official website for International Undergraduate Student Ministry at UC Berkeley"}
+    %meta{name: "author", content: "Shufei Lei"}
 
     %title International Undergraduate Student Ministry
     = csrf_meta_tags
