Updated the text

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -11,9 +11,9 @@
         .carousel-caption.d-none.d-md-block
           %h3 The Friday Gathering - Summer Edition!
           %p
-            Summer is a time for relationship deepening with God and with one another.
+            Summer is a time for deepening our relationship with God and with one another.
             %br
-            We hope to get to know one another more personally through sharing from the Word of God together.
+            The best way to do it is through studying, reflecting and sharing from God's word together.
           %h6
             The Lei's
             -# = link_to 'Durant Loft', 'https://www.google.com/maps/place/Durant+Loft+Gracepoint+Berkeley+Church/@37.867612,-122.2603332,17z/data=!3m1!4b1!4m5!3m4!1s0x80857c2f15eae943:0xf01c25977184844d!8m2!3d37.867612!4d-122.2581392', target: '_blank'
