Updated IUSM photo album link

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -34,10 +34,10 @@
           %h3 Events in Pictures
           %p
             Want to know we have been up to?
-            =link_to 'photo albums!', 'https://igsm.smugmug.com/2017'
+            =link_to 'photo albums!', 'https://ism.smugmug.com/IUSM'
 / About Section
 %section.bg-primary.text-white#about
   .container
     %h2.text-center What is IUSM?
-    =image_tag 'https://photos.smugmug.com/2018/2018-03-24-IUSM-Cataract-Falls/i-DqR2Rdz/0/71adcbbb/X2/EXPORT-7142-X2.jpg', class: 'img-fluid', id: 'student-img', alt: 'Responsive image'
+    =image_tag 'https://photos.smugmug.com/IUSM/2018/2018-03-24-IUSM-Cataract-Falls/i-DqR2Rdz/0/71adcbbb/X2/EXPORT-7142-X2.jpg', class: 'img-fluid', id: 'student-img', alt: 'Responsive image'
     .lead{style:'margin: 20px'} IUSM is an official Christian student group at UC Berkeley. We are an undergraduate student group. The students in our group come from many countries across the world, including the United States. Our mission is to “love locally, impact globally", in which we seek to create a "home away from home" for students at Berkeley. We offer weekly Bible studies, and special talks and lectures on topics such as science vs. faith. We also offer English class, small group gatherings, fun trips around the Bay Area, sports, among other things. If you want to know more about us, contact us here, or come to our upcoming events!
