--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,7 +10,7 @@
     #navbarResponsive.collapse.navbar-collapse
       %ul.navbar-nav.ml-auto
         %li.nav-item
-          = link_to 'Photos', 'https://igsm.smugmug.com/2018', class: 'nav-link rounded'
+          = link_to 'Photos', 'https://ism.smugmug.com/IUSM/', class: 'nav-link rounded'
         %li.nav-item
           = link_to 'About', '#about', class: 'nav-link rounded js-scroll-trigger'
         %li.nav-item
