--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     = csrf_meta_tags
     = csp_meta_tag
     = favicon_link_tag
+    = stylesheet_link_tag 'application', media: 'all'
     %link{rel: :stylesheet, type: 'text/css', href: 'https://use.fontawesome.com/releases/v5.2.0/css/all.css', integrity: 'sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ', crossorigin: 'anonymous'}
   %body#page-top
     #react-root
