--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,5 +1,5 @@
 .pull-right
-  = link_to 'INSTRUCTIONS', '#', data: { toggle: 'modal', target: '#boardInstrModal' }, class: 'btn btn-success'
+  = link_to 'INSTRUCTIONS', '#', data: { bs_toggle: 'modal', bs_target: '#boardInstrModal' }, class: 'btn btn-success'
   - if current_user.board
     = link_to "MY GAME BOARD", current_user.board, class: 'btn btn-warning'
   - else
@@ -36,16 +36,13 @@
   .col-md-4
     = render partial: 'sharing'
 
-#boardInstrModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", role: "dialog", tabindex: "-1"}
-  .modal-dialog.modal-lg{role: "document"}
+#boardInstrModal.modal.fade
+  .modal-dialog.modal-lg
     .modal-content
       .modal-header
         %h5#exampleModalLabel.modal-title Game Instructions
-        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
-          %span{"aria-hidden" => "true"} ×
+        %button.btn-close{"aria-label" => "Close", "data-bs-dismiss" => "modal", type: "button"}
       .modal-body
-        %h4 Why are we doing this?
-        %p To grow in our knowledge of God through doing this summer challenge bingo game together.
         %h4 Point System
         %p.easy Green is easy ==> #{Board::SCORE[:easy]} points.
         %p.medium Orange is medium ==> #{Board::SCORE[:medium]} points.
@@ -57,6 +54,3 @@
         %p Completion of Bingo - IUSM T-shirt!
         %p Highest Individual Score - Bible Project Outline Book
         %p Highest TEAM Score - $10 Certificate for Book Table
-
-      .modal-footer
-        %button.btn.btn-secondary{"data-dismiss" => "modal", type: "button"} Close
