--- a/app/views/cells/_markdown_modal.html.haml
+++ b/app/views/cells/_markdown_modal.html.haml
@@ -1,10 +1,9 @@
-#markdownModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", role: "dialog", tabindex: "-1"}
-  .modal-dialog.modal-lg{role: "document"}
+#markdownModal.modal.fade
+  .modal-dialog.modal-lg
     .modal-content
       .modal-header
         %h5#exampleModalLabel.modal-title Markdown Support
-        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
-          %span{"aria-hidden" => "true"} ×
+        %button.btn-close{"aria-label" => "Close", "data-bs-dismiss" => "modal", type: "button"}
       .modal-body
         %p Here is a short list of the supported markdown style:
         %p
@@ -12,5 +11,3 @@
           .md-style * = &lt;em&gt; or &lt;italic&gt;
           .md-style # = &lt;h1&gt;
         %p For a full list, please check visit #{link_to 'here', 'https://michelf.ca/projects/php-markdown/extra/', target: '_blank'}
-      .modal-footer
-        %button.btn.btn-secondary{"data-dismiss" => "modal", type: "button"} Close
