--- a/app/views/cells/edit.html.haml
+++ b/app/views/cells/edit.html.haml
@@ -7,7 +7,7 @@
       = message
 = form_for(@cell, url: board_cell_path(@cell.board, @cell), html: { method: :put, multipart: true }) do |f|
   .pull-right
-    =link_to '#', data: { toggle: 'modal', target: '#markdownModal'} do
+    =link_to '#', data: { bs_toggle: 'modal', bs_target: '#markdownModal'} do
       .label.label-primary Markdown Support
   .field
     = f.label 'Edit your sharing for this activity:'
