--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,24 +1,18 @@
 / Navigation
-%nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top.bg-secondary.text-uppercase
+%nav.navbar.navbar-expand-lg.navbar-light.bg-light.text-uppercase
   .container
     =link_to '/', class: 'navbar-brand js-scroll-trigger' do
       = image_tag 'favicon.ico', width: '30px'
       IUSM
-    %button.navbar-toggler.navbar-toggler-right{'aria-controls' => 'navbarResponsive', 'aria-expanded' => 'false', 'aria-label' => 'Toggle navigation', 'data-target' => '#navbarResponsive', 'data-toggle' => 'collapse', type: 'button'}
+    %button.navbar-toggler.navbar-toggler-right{'aria-controls' => 'navbarResponsive', 'aria-expanded' => 'false', 'aria-label' => 'Toggle navigation', 'data-target' => '#navbarResponsive', 'data-bs-toggle' => 'collapse', type: 'button'}
       Menu
       %i.fa.fa-bars
     #navbarResponsive.collapse.navbar-collapse
       %ul.navbar-nav.ml-auto
         %li.nav-item
-          = link_to 'Photos', 'https://ism.smugmug.com/IUSM/', class: 'nav-link rounded'
-        %li.nav-item
-          = link_to 'About', '#about', class: 'nav-link rounded js-scroll-trigger'
-        %li.nav-item
-          = link_to 'Connect', '#connect', class: 'nav-link rounded js-scroll-trigger'
-        %li.nav-item
           .dropdown
             = link_to '#', class: 'btn btn-secondary dropdown-toggle',
-              id: 'dropdownMenuLink', data: { toggle: 'dropdown' },
+              id: 'dropdownMenuLink', data: { bs_toggle: 'dropdown' },
               'aria-haspopup' => 'true', 'aria-expanded' => 'false' do
               = user_signed_in? ? current_user.username : 'Member'
             .dropdown-menu.dropdown-menu-right{'aria-labelledby' => 'dropdownMenuButton'}
